k8/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: base-django
  labels:
    name: base-django
