k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-django-deployment
  labels:
    app: base-django-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: base-django-deployment
  template:
    metadata:
      labels:
        app: base-django-deployment
    spec:
      containers:
      - name: base-django-deployment
        image: nischalstha/django_base_web:latest
        command: [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "450Mi"
            cpu: "900m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
